--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <script>
   var wrapper = document.getElementById("wrapper");
 
-  var dataStr = '{ "firstName": "Jonh", "lastName": "Smith", "phones": ["123-45-67", "987-65-43"]}';
+  var dataStr = '{"Employees":[{"userId":"krish","jobTitle":"Developer","firstName":"Krish","lastName":"Lee","employeeCode":"E1","region":"CA","phoneNumber":"123456","emailAddress":"krish.lee@learningcontainer.com"},{"userId":"devid","jobTitle":"Developer","firstName":"Devid","lastName":"Rome","employeeCode":"E2","region":"CA","phoneNumber":"1111111","emailAddress":"devid.rome@learningcontainer.com"},{"userId":"tin","jobTitle":"Program Directory","firstName":"tin","lastName":"jonson","employeeCode":"E3","region":"CA","phoneNumber":"2222222","emailAddress":"tin.jonson@learningcontainer.com"}]}';
   try {
     var data = JSON.parse(dataStr);
   } catch (e) {
